# translate-audio-NLP-Ai

./: .gitignore  PLAN.md  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: nightly_golden_eval.py  weekly_drift_check.py
app/: app.py
archive/: README.md  watcher_requirements.txt.legacy
archive/app/: requirements.txt
backend/services/gateway/: .dockerignore  Dockerfile  pyproject.toml
backend/services/gateway/src/gateway/: database.py  main.py  models.py  schemas.py
backend/services/llm/: .dockerignore  Dockerfile  pyproject.toml
backend/services/llm/src/llm/: main.py
backend/services/pipeline/: .dockerignore  Dockerfile  pyproject.toml
backend/services/pipeline/src/pipeline/: main.py  prompt_guard.py
backend/services/stt/: Dockerfile  pyproject.toml
backend/services/stt/src/stt/: main.py  whisper_service.py
backend/services/tts/: Dockerfile  pyproject.toml
backend/services/tts/src/tts/: main.py
backend/services/watcher/: .dockerignore  Dockerfile  pyproject.toml
backend/services/watcher/src/watcher/: main.py
docs/: article-dev-ai.md  contribution_check.txt
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend.nosync/: middleware.ts  next.config.ts  package.json
frontend.nosync/app/: globals.css  page.tsx
frontend.nosync/app/admin/: page.tsx
frontend.nosync/app/forgot-password/: page.tsx
frontend.nosync/app/login/: page.tsx
frontend.nosync/app/register/: page.tsx
frontend.nosync/app/reset-password/: page.tsx
frontend.nosync/lib/: admin.ts  api.ts  auth.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/app/meeting/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: admin.ts  api.ts  meeting.ts
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: microservices.json
monitoring/grafana/provisioning/dashboards/: default.yml
monitoring/mlflow/: Dockerfile
outputs/experiments/: evaluation_report.md  results.csv
scripts/: clear_langfuse_scores.py  eval_golden.py  fetch_flashes.py  import_metrics_to_langfuse.py  langfuse_import.py  live_transcribe.py  mlflow_register.py  patch_metrics.py  patch_tts_wer.py  run_pipeline.py  scan_events.py  transcribe_batch_whisper.py
services/gateway/: Dockerfile  auth.py  main.py  models.py  schemas.py
services/llm/: Dockerfile  main.py
services/pipeline/: Dockerfile  main.py
services/stt/: Dockerfile  main.py
services/tts/: Dockerfile  main.py
services/watcher/: Dockerfile  main.py
src/flash_nlp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/flash_nlp/acquisition/: __init__.py  fetcher.py
src/flash_nlp/analysis/: __init__.py  event_extractor.py  notifier.py
src/flash_nlp/io/: __init__.py  file_utils.py
src/flash_nlp/transcription/: __init__.py  audio_utils.py
tests/: test_audio_utils.py  test_event_extractor.py  test_fetcher.py  test_io.py  test_whisper_service.py
