[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-nlp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.3",
    "numpy>=1.26",
    "scipy>=1.11",
    "sounddevice>=0.5",
    "requests>=2.31",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
