[project]
name = "gateway"
version = "0.1.0"
description = "Gateway Service — JWT auth + admin dashboard API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
