[project]
name = "llm"
version = "0.1.0"
description = "LLM Service — translation via LiteLLM (Groq, OpenAI, Anthropic)"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]
