[project]
name = "pipeline"
version = "0.1.0"
description = "Pipeline Service — Langchain LCEL orchestrator (STT → LLM → TTS)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "langchain-core>=0.2",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "langfuse>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
