[project]
name = "stt"
version = "0.1.0"
description = "STT Service — Faster-Whisper transcription"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "prometheus-fastapi-instrumentator>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt"]
