[project]
name = "tts"
version = "0.1.0"
description = "TTS Service — Mistral Voxtral or local MMS-TTS fallback"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.0",
    "transformers>=4.40",
    "torch>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scipy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts"]
