[project]
name = "watcher"
version = "0.1.0"
description = "Watcher Service — live traffic stream"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "faster-whisper>=1.0.3",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "numpy>=1.26",
    "prometheus-fastapi-instrumentator>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watcher"]
